...
      <TouchableOpacity style={styles.button} onPress={() => 
        navigation.reset({
          index: 0,
          routes: [{ name: Screens.Login }]
        })
        }>
        <Text style={styles.button_text}>Logout</Text>
      </TouchableOpacity>
    </View>
  );
}

const styles = StyleSheet.create({
...
