...
              />
            </View>

            <TouchableOpacity
              style={styles.loginBtn}
              onPress={() => this.sendOTP()}>
              <Text style={styles.loginText}>Send OTP to Email</Text>
            </TouchableOpacity>

          </KeyboardAvoidingView>
        </TouchableWithoutFeedback>
      </ImageBackground>
    );
...
